First compelte draft.

--- a/references.bib
+++ b/references.bib
@@ -9,7 +9,118 @@
 
 @comment{jabref-meta: databaseType:bibtex;}
 
+@article{Powers:2021:a,
+	title = {Cooperation in large-scale human societies—{What}, if anything, makes it unique, and how did it evolve?},
+	volume = {30},
+	issn = {1520-6505},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/evan.21909},
+	doi = {10.1002/evan.21909},
+	abstract = {To resolve the major controversy about why prosocial behaviors persist in large-scale human societies, we propose that two questions need to be answered. First, how do social interactions in small-scale and large-scale societies differ? By reviewing the exchange and collective-action dilemmas in both small-scale and large-scale societies, we show they are not different. Second, are individual decision-making mechanisms driven by self-interest? We extract from the literature three types of individual decision-making mechanism, which differ in their social influence and sensitivity to self-interest, to conclude that humans interacting with non-relatives are largely driven by self-interest. We then ask: what was the key mechanism that allowed prosocial behaviors to continue as societies grew? We show the key role played by new social interaction mechanisms—change in the rules of exchange and collective-action dilemmas—devised by the interacting individuals, which allow for self-interested individuals to remain prosocial as societies grow.},
+	language = {en},
+	number = {4},
+	urldate = {2022-12-30},
+	journal = {Evolutionary Anthropology: Issues, News, and Reviews},
+	author = {Powers, Simon T. and van Schaik, Carel P. and Lehmann, Laurent},
+	year = {2021},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/evan.21909},
+	keywords = {cooperation, institutions, evolutionary psychology, cultural group selection, human social evolution, large-scale societies},
+	pages = {280--293},
+	file = {Full Text PDF:C\:\\Users\\simon\\Zotero\\storage\\7HQMYH8C\\Powers et al. - 2021 - Cooperation in large-scale human societies—What, i.pdf:application/pdf;Snapshot:C\:\\Users\\simon\\Zotero\\storage\\KB44Q5IK\\evan.html:text/html},
+}
 
+@article{Currie:2021:a,
+	title = {The cultural evolution and ecology of institutions},
+	volume = {376},
+	url = {https://royalsocietypublishing.org/doi/full/10.1098/rstb.2020.0047},
+	doi = {10.1098/rstb.2020.0047},
+	abstract = {Human societies are structured by what we refer to as ‘institutions’, which are socially created and culturally inherited proscriptions on behaviour that define roles and set expectations about social interactions. The study of institutions in several social science fields has provided many important insights that have not been fully appreciated in the evolutionary human sciences. However, such research has often lacked a shared understanding of general processes of change that shape institutional diversity across space and time. We argue that evolutionary theory can provide a useful framework for synthesizing information from different disciplines to address issues such as how and why institutions change over time, how institutional rules co-evolve with other culturally inherited traits, and the role that ecological factors might play in shaping institutional diversity. We argue that we can gain important insights by applying cultural evolutionary thinking to the study of institutions, but that we also need to expand and adapt our approaches to better handle the ways that institutions work, and how they might change over time. In this paper, we illustrate our approach by describing macro-scale empirical comparative analyses that demonstrate how evolutionary theory can be used to generate and test hypotheses about the processes that have shaped some of the major patterns we see in institutional diversity over time and across the world today. We then go on to discuss how we might usefully develop micro-scale models of institutional change by adapting concepts from game theory and agent-based modelling. We end by considering current challenges and areas for future research, and the potential implications for other areas of study and real-world applications.
+
+This article is part of the theme issue ‘Foundations of cultural evolution’.},
+	number = {1828},
+	urldate = {2022-12-30},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+	author = {Currie, Thomas E. and Campenni, Marco and Flitton, Adam and Njagi, Tim and Ontiri, Enoch and Perret, Cedric and Walker, Lindsay},
+	month = jul,
+	year = {2021},
+	note = {Publisher: Royal Society},
+	keywords = {institutions, cultural evolution, barrier effects, driven trend, political complexity},
+	pages = {20200047},
+	file = {Full Text PDF:C\:\\Users\\simon\\Zotero\\storage\\RK4BYLZ4\\Currie et al. - 2021 - The cultural evolution and ecology of institutions.pdf:application/pdf},
+}
+
+@article{Gavrilets:2016:a,
+	title = {Convergence to consensus in heterogeneous groups and the emergence of informal leadership},
+	volume = {6},
+	copyright = {2016 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/srep29704},
+	doi = {10.1038/srep29704},
+	abstract = {When group cohesion is essential, groups must have efficient strategies in place for consensus decision-making. Recent theoretical work suggests that shared decision-making is often the most efficient way for dealing with both information uncertainty and individual variation in preferences. However, some animal and most human groups make collective decisions through particular individuals, leaders, that have a disproportionate influence on group decision-making. To address this discrepancy between theory and data, we study a simple, but general, model that explicitly focuses on the dynamics of consensus building in groups composed by individuals who are heterogeneous in preferences, certain personality traits (agreeability and persuasiveness), reputation and social networks. We show that within-group heterogeneity can significantly delay democratic consensus building as well as give rise to the emergence of informal leaders, i.e. individuals with a disproportionately large impact on group decisions. Our results thus imply strong benefits of leadership particularly when groups experience time pressure and significant conflict of interest between members (due to various between-individual differences). Overall, our models shed light on why leadership and decision-making hierarchies are widespread, especially in human groups.},
+	language = {en},
+	number = {1},
+	urldate = {2022-12-30},
+	journal = {Scientific Reports},
+	author = {Gavrilets, Sergey and Auerbach, Jeremy and van Vugt, Mark},
+	month = jul,
+	year = {2016},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	keywords = {Social evolution, Evolution},
+	pages = {29704},
+	file = {Full Text PDF:C\:\\Users\\simon\\Zotero\\storage\\NBAZ99ZK\\Gavrilets et al. - 2016 - Convergence to consensus in heterogeneous groups a.pdf:application/pdf},
+}
+
+@misc{Gavrilets:2022:a,
+	title = {Mathematical models of the evolution of institutions},
+	url = {https://osf.io/preprints/socarxiv/kuxvd/},
+	doi = {10.31235/osf.io/kuxvd},
+	abstract = {We review existing mathematical models describing the evolution of social institutions. We discuss the role that formal models can play in understanding institutional change. We highlight the main features such models by focusing on three related questions: What is the function of an institution? What social processes are involved in establishing institutional rules? How does institutional change occur? We illustrate these points by discussing some existing examples of how intuitions have been modeled. Inspired some major patterns of human history, and reflecting the themes of this book, we do this by separately considering institutions in small-scale, the historical emergence of complex sociopolitical institutions, and political and economic institutions in more recent societies. Explicit models of institutional evolution have been relatively few in number but offer the potential of providing important insights into a key aspect of human social organization. We highlight some of important issues that have not received much attention in current models, such as the coevolution of institutions with other aspects of culture.},
+	language = {en-us},
+	urldate = {2022-12-22},
+	publisher = {SocArXiv},
+	author = {Gavrilets, Sergey and Currie, Thomas E.},
+	month = may,
+	year = {2022},
+	keywords = {cooperation, cultural evolution, Social and Behavioral Sciences, Anthropology, modeling, Models and Methods, Political Science, Social and Cultural Anthropology, social evolution},
+	file = {Full Text PDF:C\:\\Users\\simon\\Zotero\\storage\\JGPDREPY\\Gavrilets and Currie - 2022 - Mathematical models of the evolution of institutio.pdf:application/pdf},
+}
+
+@article{Perret:2022:a,
+	title = {An investigation of the role of leadership in consensus decision-making},
+	volume = {543},
+	issn = {0022-5193},
+	url = {https://www.sciencedirect.com/science/article/pii/S0022519322000923},
+	doi = {10.1016/j.jtbi.2022.111094},
+	abstract = {Leadership is a widespread phenomena in social organisms and it is recognised to facilitate coordination between individuals. While the role of leadership in group foraging or swarm movement is well understood, it is not clear if leaders would also benefit more complex forms of coordination. In particular, a number of organisms coordinate by consensus decision-making, where individuals explicitly communicate their opinions until they converge toward a common decision. Taking inspiration from physical sciences, we extend a consensus formation model to integrate leaders, which we define by three traits: persuasiveness, talkativeness, and stubbornness. We use numerical simulations to investigate the effect of the number of leaders and their characteristics on the time a group spends to reach consensus, and the bias in the final decision. We show that having a minority of influential individuals (leaders) and a majority of influenceable individuals (followers) reduces the time to reach consensus, but biases the decision towards the preferences of the leaders. This effect emerges solely from the differences in individuals’ personality traits, with the most determinant trait being the talkativeness of the individuals. Overall, we provide a comprehensive investigation of the effects of leaders and their traits on consensus decision-making.},
+	language = {en},
+	urldate = {2022-12-30},
+	journal = {Journal of Theoretical Biology},
+	author = {Perret, Cedric and Powers, Simon T.},
+	month = jun,
+	year = {2022},
+	keywords = {Coordination, Consensus decision-making, Leadership, Opinion dynamics},
+	pages = {111094},
+	file = {ScienceDirect Snapshot:C\:\\Users\\simon\\Zotero\\storage\\TEDX2LDI\\S0022519322000923.html:text/html},
+}
+
+@article{Perret:2020:a,
+	title = {From disorganized equality to efficient hierarchy: how group size drives the evolution of hierarchy in human societies},
+	volume = {287},
+	shorttitle = {From disorganized equality to efficient hierarchy},
+	url = {https://royalsocietypublishing.org/doi/full/10.1098/rspb.2020.0693},
+	doi = {10.1098/rspb.2020.0693},
+	abstract = {A manifest trend is that larger and more productive human groups shift from distributed to centralized decision-making. Voluntary theories propose that human groups shift to hierarchy to limit scalar stress, i.e. the increase in cost of organization as a group grows. Yet, this hypothesis lacks a mechanistic model to investigate the organizational advantage of hierarchy and its role on its evolution. To fill this gap, we describe social organization by the distribution of individuals’ capacity to influence others. We then integrate this formalization into models of social dynamics and evolutionary dynamics. First, our results demonstrate that hierarchy strongly reduces scalar stress, and that this benefit can emerge solely because leaders and followers differ in their capacity to influence others. Second, the model demonstrates that this benefit can be sufficient to drive the evolution of leader and follower behaviours and ultimately, the transition from small egalitarian to large hierarchical groups.},
+	number = {1928},
+	urldate = {2022-12-30},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Perret, Cedric and Hart, Emma and Powers, Simon T.},
+	month = jun,
+	year = {2020},
+	note = {Publisher: Royal Society},
+	keywords = {leadership, hierarchy, evolution, consensus decision-making},
+	pages = {20200693},
+	file = {Full Text PDF:C\:\\Users\\simon\\Zotero\\storage\\LR8PN2SG\\Perret et al. - 2020 - From disorganized equality to efficient hierarchy.pdf:application/pdf},
+}
 
 @article{ALW20,
 	Author = {Alger, I. and Weibull, J. W. and Lehmann, L.},
@@ -11436,7 +11547,7 @@ irrigation communities and other water rights, and fisheries.},
 	Year = {2008},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1146/annurev.anthro.37.081407.085246}}
 
-@article{Carballo:2012:a,
+@article{Carballo:2014:a,
 	Abstract = {Investigations of the evolutionary dynamics of cooperation and collective action provide productive venues for theorizing social complexity, yet this multidisciplinary scholarship contains analytical and epistemological tensions that require reconciliation. We propose a course for integration of this diverse literature to investigate the emergence and developmental trajectories of complex societies. Greater attention to collective action problems, cultural mechanisms that promote cooperation, differentiation of human interests, and multiscalar research designs provide firmer conceptual underpinnings for a theoretically grounded cultural evolutionary framework. The case of agricultural intensification in pre-Hispanic highland Mexico is used to illustrate major points of the paper.},
 	Author = {Carballo, David M. and Roscoe, Paul and Feinman, Gary M.},
 	Booktitle = {Journal of Archaeological Method and Theory},
@@ -11460,6 +11571,13 @@ irrigation communities and other water rights, and fisheries.},
 	Volume = {21},
 	Year = {2014},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s10816-012-9147-2}}
+
+@book{Michels:1911:a,
+    title = {{Political parties: A sociological study of the oligarchical tendencies of modern democracy}},
+    year = {1911},
+    author = {Michels, Robert},
+    publisher = {New York: The Free Press}
+}
 
 @article{Lehmann:2002:a,
 	Author = {Lehmann, Laurent and Perrin, Nicolas},
